[package]
name = "mining_pool_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
surrealdb = "1.0.0-beta.8"
env_logger = "0.7.1"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
thiserror = "1"